@ether/.intellij/src/main/grammar/ray.txt.bnf
{
  parserClass="com.orbitmines.ether.Ray.Txt.Parser"
  psiClassPrefix="Ray"
  psiPackage="com.orbitmines.ether.psi"
}

file ::= statement*

statement ::= KEYWORD IDENTIFIER "=" expr

expr ::= NUMBER | IDENTIFIER

KEYWORD ::= 'let'
IDENTIFIER ::= [a-zA-Z_][a-zA-Z0-9_]*
NUMBER ::= [0-9]+
